force-app/main/default/objects/ABFL_Case_Detail__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>REMARKS from UNFYD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>