force-app/main/default/objects/ABFL_Case_Detail__c/fields/Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Details__c</fullName>
    <label>Request Details</label>
    <type>TextArea</type>
</CustomField>