force-app/main/default/objects/ABFL_Case_Detail__c/fields/Resolved_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolved Email Sent</label>
    <type>Checkbox</type>
</CustomField>