force-app/main/default/objects/ABFL_Case_Detail__c/fields/Retention_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Retention_Outcome__c</fullName>
    <label>Retention Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Retained- High ROI</fullName>
            </value>
            <value>
                <fullName>Not Retained-BT</fullName>
            </value>
            <value>
                <fullName>Not Retained-Death Case</fullName>
            </value>
            <value>
                <fullName>Not Retained-Delinquent account</fullName>
            </value>
            <value>
                <fullName>Not Retained-Own Fund</fullName>
            </value>
            <value>
                <fullName>Not Retained-Sale of Property</fullName>
            </value>
            <value>
                <fullName>Not Retained-Service Issue</fullName>
            </value>
            <value>
                <fullName>Not Retained-Top Up</fullName>
            </value>
            <value>
                <fullName>Not Retained-Stress account</fullName>
            </value>
            <value>
                <fullName>Retained - FC Charges</fullName>
            </value>
            <value>
                <fullName>Retained - Loan Overdue</fullName>
            </value>
            <value>
                <fullName>Retained - Non-Contactable</fullName>
            </value>
            <value>
                <fullName>Retained - ROI</fullName>
            </value>
            <value>
                <fullName>Retained - Top up</fullName>
            </value>
            <value>
                <fullName>Retained -Lock in Period</fullName>
            </value>
            <value>
                <fullName>Retained -Part Payment</fullName>
            </value>
            <value>
                <fullName>Retained -Service</fullName>
            </value>
            <value>
                <fullName>Retained -Unregistered/Non-Customer</fullName>
            </value>
            <value>
                <fullName>Retained - Sales No &amp; Retention No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>