force-app/main/default/objects/ABFL_Case_Detail__c/fields/Retention_Process_Stage__c.field-meta.xml
<CustomField>
    <fullName>Retention_Process_Stage__c</fullName>
    <label>Retention Process Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sanction letter Retrieval</fullName>
            </value>
            <value>
                <fullName>Credit wetting for Own Funds proof</fullName>
            </value>
            <value>
                <fullName>Credit wetting for Sale Of Property</fullName>
            </value>
            <value>
                <fullName>Response by BIU &amp; Credit on TOP up &amp; BT Status</fullName>
            </value>
            <value>
                <fullName>NSM/ / BIU team release of FCL&amp; LOD</fullName>
            </value>
            <value>
                <fullName>TDS Clearance</fullName>
            </value>
            <value>
                <fullName>BH/ / BIU team release of FCL &amp; LOD</fullName>
            </value>
            <value>
                <fullName>NSM / BIU for ROI Approval</fullName>
            </value>
            <value>
                <fullName>BH / BIU for ROI Approval</fullName>
            </value>
            <value>
                <fullName>Release of FCL &amp; LOD</fullName>
            </value>
            <value>
                <fullName>Email ECL &amp; LOD</fullName>
            </value>
            <value>
                <fullName>Retention Communication</fullName>
            </value>
            <value>
                <fullName>Branch Ops updating New EMI - TAT</fullName>
            </value>
            <value>
                <fullName>Res - Foreclosure letter and List of Documents</fullName>
            </value>
            <value>
                <fullName>Res -Sanction letter uploaded in Notes</fullName>
            </value>
            <value>
                <fullName>Res - Revised Rate Approval Received</fullName>
            </value>
            <value>
                <fullName>Res- Top-up disbursed / Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>