force-app/main/default/objects/ABFL_Case_Detail__c/fields/Retention_Status__c.field-meta.xml
<CustomField>
    <fullName>Retention_Status__c</fullName>
    <label>Retention Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retained</fullName>
            </value>
            <value>
                <fullName>Not Retained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>