force-app/main/default/objects/ABFL_Case_Detail__c/fields/ROI_Approval__c.field-meta.xml
<CustomField>
    <fullName>ROI_Approval__c</fullName>
    <label>ROI Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>