force-app/main/default/objects/ABFL_Case_Detail__c/fields/ROI_Grid__c.field-meta.xml
<CustomField>
    <fullName>ROI_Grid__c</fullName>
    <label>ROI Grid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within Grid</fullName>
            </value>
            <value>
                <fullName>Outside Grid</fullName>
            </value>
            <value>
                <fullName>Not Retained</fullName>
                <isActive>false</isActive>
                <label>Not Retained</label>
            </value>
            <value>
                <fullName>Retained</fullName>
                <isActive>false</isActive>
                <label>Retained</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>