force-app/main/default/objects/ABFL_Case_Detail__c/fields/Sanction_Letter__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanction Letter</label>
    <type>Checkbox</type>
</CustomField>