force-app/main/default/objects/ABFL_Case_Detail__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Customer Segment</description>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>