force-app/main/default/objects/ABFL_Case_Detail__c/fields/SL_LA_Available__c.field-meta.xml
<CustomField>
    <fullName>SL_LA_Available__c</fullName>
    <label>SL/LA Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>