force-app/main/default/objects/ABFL_Case_Detail__c/fields/Sub_Disposition_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Disposition_Sub_Category__c</fullName>
    <label>Sub Disposition Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Updated in Lentra</fullName>
            </value>
            <value>
                <fullName>Call back Requested</fullName>
            </value>
            <value>
                <fullName>Call disconnected</fullName>
            </value>
            <value>
                <fullName>Call disconnected before offer briefing</fullName>
            </value>
            <value>
                <fullName>Cheque bounce</fullName>
            </value>
            <value>
                <fullName>Customer disconnected after offer briefing</fullName>
            </value>
            <value>
                <fullName>Document Deficiency</fullName>
            </value>
            <value>
                <fullName>FOIR Not Met</fullName>
            </value>
            <value>
                <fullName>High ROI</fullName>
            </value>
            <value>
                <fullName>Invalid No.</fullName>
            </value>
            <value>
                <fullName>Language barrier - Kannada</fullName>
            </value>
            <value>
                <fullName>Loan availed in last 6 months</fullName>
            </value>
            <value>
                <fullName>Loan process complete</fullName>
            </value>
            <value>
                <fullName>No requirement</fullName>
            </value>
            <value>
                <fullName>Not reachable</fullName>
            </value>
            <value>
                <fullName>NQ-Loan taken from Another FC</fullName>
            </value>
            <value>
                <fullName>Ringing no Response</fullName>
            </value>
            <value>
                <fullName>Switched off</fullName>
            </value>
            <value>
                <fullName>Language Barrier - Tamil</fullName>
            </value>
            <value>
                <fullName>Language Barrier -Telugu</fullName>
            </value>
            <value>
                <fullName>Wrong No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>