force-app/main/default/objects/ABFL_Case_Detail__c/fields/SubSource__c.field-meta.xml
<CustomField>
    <fullName>SubSource__c</fullName>
    <description>Subsource of the case</description>
    <label>SubSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>