force-app/main/default/objects/ABFL_Case_Detail__c/fields/test_deletion__c.field-meta.xml
<CustomField>
    <fullName>test_deletion__c</fullName>
    <description>Field created to test deletion of the field from repository</description>
    <label>test deletion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>