force-app/main/default/objects/ABFL_Case_Detail__c/fields/Type_of_Descripency__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Descripency__c</fullName>
    <label>Type of Descripency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limit Insufficient</fullName>
            </value>
            <value>
                <fullName>DRL Revised Request</fullName>
            </value>
            <value>
                <fullName>Missing attachment</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Grace Period</fullName>
            </value>
            <value>
                <fullName>Interest pending</fullName>
            </value>
            <value>
                <fullName>Mail received from unregistered email id</fullName>
            </value>
            <value>
                <fullName>Anchor Approval Pending</fullName>
            </value>
            <value>
                <fullName>Mismatch in Amount</fullName>
            </value>
            <value>
                <fullName>Add New Beneficiary details</fullName>
            </value>
            <value>
                <fullName>Bank Updation</fullName>
            </value>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>