force-app/main/default/objects/ABFL_Case_Detail__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>KB URL of the Case</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>