force-app/main/default/objects/ABFL_Case_Detail__c/fields/UTRNo__c.field-meta.xml
<CustomField>
    <fullName>UTRNo__c</fullName>
    <description>Unique Transaction Reference number</description>
    <label>UTRNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>