force-app/main/default/objects/ABFL_Case_Detail__c/fields/Voice_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Voice_of_Customer__c</fullName>
    <label>Voice of Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>