force-app/main/default/objects/ABFL_Case_Detail__c/validationRules/Ebot_Feedback_Add_IncorrectCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>Ebot_Feedback_Add_IncorrectCategory</fullName>
    <active>true</active>
    <description>If &quot;Incorrect Categorization&quot; was manually added an error will be triggered</description>
    <errorConditionFormula>AND(
    NOT(INCLUDES(PRIORVALUE(Ebot_Feedback__c), &quot;Incorrect Categorization&quot;)),
    INCLUDES(Ebot_Feedback__c, &quot;Incorrect Categorization&quot;)
)</errorConditionFormula>
    <errorMessage>Incorrect Categorization cannot be added.</errorMessage>
</ValidationRule>