force-app/main/default/objects/ABFL_Case_Detail__c/validationRules/Ebot_Feedback_Add_IncorrectEmailDesc.validationRule-meta.xml
<ValidationRule>
    <fullName>Ebot_Feedback_Add_IncorrectEmailDesc</fullName>
    <active>true</active>
    <description>If &quot;Incorrect Email Description&quot; was added manually an error has to be trigged.</description>
    <errorConditionFormula>AND(
    NOT(INCLUDES(PRIORVALUE(Ebot_Feedback__c), &quot;Incorrect Email Description&quot;)),
    INCLUDES(Ebot_Feedback__c, &quot;Incorrect Email Description&quot;)
)</errorConditionFormula>
    <errorMessage>Incorrect Email Description cannot added.</errorMessage>
</ValidationRule>