force-app/main/default/objects/ABFL_Case_Detail__c/validationRules/EMI_Amount_Less_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>EMI_Amount_Less_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Refund_Amount__c &lt; 0, Diputed_Amount__c &lt; 0, Emi_Amount__c &lt; 0,  Amount__c &lt; 0, IO_recommended_Amount__c &lt; 0)</errorConditionFormula>
    <errorMessage>Amount can&apos;t be less than zero</errorMessage>
</ValidationRule>