force-app/main/default/objects/ABFL_Case_Detail__c/validationRules/From_Date_Cannot_be_greater_than_To_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>From_Date_Cannot_be_greater_than_To_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(From_Date__c)),
    NOT(ISBLANK(To_Date__c)),
    From_Date__c &gt; To_Date__c
)</errorConditionFormula>
    <errorMessage>From Date cannot be greater than To Date</errorMessage>
</ValidationRule>