force-app/main/default/objects/ABFL_Case_Detail__c/listViews/RnR_EBOT_Feedback_Update.listView-meta.xml
<ListView>
    <fullName>RnR_EBOT_Feedback_Update</fullName>
    <columns>NAME</columns>
    <columns>CaseNumber__c</columns>
    <columns>BOT_Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CaseNumber__c</field>
        <operation>contains</operation>
        <value>00287110,00287111</value>
    </filters>
    <label>RnR EBOT Feedback Update</label>
</ListView>